# universal-learning-measurement-system

./: .gitignore  README.md  TODO.md  package-lock.json  package.json
app/: electron.vite.config.ts  index.html  package-lock.json  package.json  tsconfig.json
app/electron/: main.ts
app/src/: App.tsx  main.tsx  vite-env.d.ts
apps/chrome-ext/: README.md  background.js  floater.js  manifest.json  popup.css  popup.html  popup.js
apps/chrome-ext/content/: article.js  youtube.js
apps/mcp/: Cargo.toml
apps/mcp/src/: main.rs
apps/pdf-reader/: index.html  package.json  vite.config.ts
apps/pdf-reader/src/: App.tsx  app.css  main.tsx
apps/pdf-reader/src-tauri/: Cargo.toml  tauri.conf.json
apps/pdf-reader/src-tauri/capabilities/: default.json
apps/pdf-reader/src-tauri/src/: lib.rs  main.rs  paper.rs  translate.rs  wiki_dir.rs
apps/quiz/: index.html  package.json
apps/quiz/src/: App.tsx
apps/quiz/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/quiz/src-tauri/src/: blackboard.rs  learn.rs  lib.rs  main.rs  snapshot.rs  types.rs  wiki.rs
apps/quiz/workspace/: .gitignore
apps/shell/: .gitignore  package.json  playwright.config.ts  tsconfig.node.json
apps/shell-tauri/: package.json  tsconfig.json  vite.config.ts
apps/shell-tauri/src/: App.tsx  bridge.ts  main.tsx  styles.css
apps/shell-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/shell-tauri/src-tauri/capabilities/: default.json
apps/shell-tauri/src-tauri/src/: blackboard.rs  export.rs  ext_server.rs  gemini.rs  inputs.rs  learn.rs  lib.rs  main.rs  overrides.rs  raw_bank.rs  regenerate.rs  types.rs  workflow.rs
apps/shell-tauri/src/components/: PdfReader.tsx  WikiTab.tsx
apps/shell-tauri/src/state/: ipcBridge.ts  shellStore.ts  translateBoard.ts
apps/shell/e2e/: helpers.ts  smoke.spec.ts  tsconfig.json
apps/shell/electron/: ipc.ts  main.ts  preload.ts  tsconfig.json
apps/shell/electron/coordinator/: blackboard.ts  export.ts  gemini.ts  inputs.ts  overrides.ts  regenerate.ts  types.ts  workflow.ts
apps/shell/src/: App.tsx  main.tsx
apps/shell/src/fixtures/: index.ts
apps/shell/src/state/: ipcBridge.ts  shellStore.ts  translateBoard.ts
apps/shell/src/styles/: shell.css  tokens.css
apps/shell/src/types/: item.ts
apps/spike/: .gitignore  main.js  package.json  smoke-seed.js
apps/spike/fixtures/: astrology-dimensions.yaml  astrology-guidance.md  econ-dimensions.yaml  econ-material.md  iching-material.md  taiwan-history-dimensions.yaml  taiwan-history-material.md
apps/spike/runs/: astrology-round1.json
apps/wiki-maintainer/: index.html  package.json  vite.config.ts
apps/wiki-maintainer/src/: App.tsx  app.css
apps/wiki-maintainer/src-tauri/: Cargo.toml  tauri.conf.json
apps/wiki-maintainer/src-tauri/capabilities/: default.json
apps/wiki-maintainer/src-tauri/src/: claude.rs  lib.rs  log_writer.rs  main.rs  poll.rs  state.rs  wiki_dir.rs
docs/: spike_learnings.md  spike_v2_learnings.md  spike_v3_learnings.md  spike_v3_spec.md  ulms_architecture.md
docs/adr/: 001-formal-v1-stack.md
spike/: .gitignore  HANDOFF.md  README.md  main.js  package-lock.json  package.json  renderer.html  renderer.js
spike/fixtures/: astrology-material.md  econ-guidance.md  iching-dimensions.yaml  iching-guidance.md  rust-dimensions.yaml  rust-guidance.md  rust-material.md  taiwan-history-guidance.md
spike/runs/: iching-round1.json  taiwan-history-round1.json
(+10 files in other folders)
