[package]
name = "ulms-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server exposing the ULMS wiki + raw runs to LLM clients"

[[bin]]
name = "ulms-mcp"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
