[package]
name = "ulms-wiki-maintainer"
version = "0.1.0"
description = "ULMS wiki maintainer — long-running claude session that ingests raw resources into the Obsidian-hosted wiki"
edition = "2021"
rust-version = "1.77"

[lib]
name = "ulms_wiki_maintainer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
